<resources>
    <string name="app_name">超级校园宝</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_home">ActivityHome</string>
    <string name="title_activity_activity_trade">ActivityTrade</string>
    <string name="title_activity_activity_contact">ActivityContact</string>
    <string name="title_activity_activity_mine">ActivityMine</string>
    <string name="activity_out_school">ActivityOutSchool</string>
    <string name="acitivity_mood_in_put">ActivityMoodInPut</string>
    <string name="acitivity_market_input">ActivityMarketInPut</string>
    <string name="acitivity_slide_back">SlideBackAcitivity</string>
    <string name="title_activity_activity_register">ActivityRegister</string>
    <string name="activity_forget_password">ActivityForgetPwd</string>
    <string name="activity_confirm_pwd">ActivityConfirmPwd</string>
    <string name="title_activity_activity_outschool_main">ActivityOutschool</string>
    <string name="acitivity_mood_in_detail">AcitivityMoodInDetail</string>
    <string name="title_activity_activity_outschool_friend">OutSchoolFriend</string>
    <string name="activity_userlogin">超级校园宝</string>
    <string name="rb_title_home_topnews">  头条  </string>
    <string name="rb_title_home_school">  校园  </string>
    <string name="topnnews_out">  外校头条  </string>
    <string name="friend_out">  外校朋友  </string>
    <string name="tv_title_mine_me">我</string>
    <string name="tv_title_mine_mypersonality">个人资料</string>
    <string name="tv_coupon">优惠券</string>
    <string name="tv_decorate">装饰品</string>
    <string name="tv_ele_product">电子产品</string>
    <string name="tv_other">其他</string>
    <string name="tv_comment">评论</string>
    <string name="tv_like">赞</string>
    <string name="bt_commit">发布</string>
    <string name="recyclerview_footer">正在加载...</string>
    <string name="tx_activity_mine">我</string>
    <string name="tv_mood_put">说点什么吧...</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="autolayout_activity">AutoLayoutActivity</string>
    <string name="activity_image_page">ImagePagerActivity</string>
    <string name="activity_myself_good_detail">ActivityMyselfGoodDetail</string>
    <string name="activity_his_store">ActivityHisStore</string>
    <string name="activity_my_mood">ActivityMyMood</string>
    <string name="activity_pay">打赏我们</string>
    <string name="activity_persondata">个人资料</string>
    <string name="activity_news_history">ActivityNewsHistory</string>
    <string name="acitivity_choose_pic">ActivityChoosePic</string>
    <string name="acitivity_photo">ActivityPhoto</string>
    <string name="acitivity_image_grid">ActivityImageGrid</string>
    <string name="acitivity_coupon_detail">ActivityCouponDetail</string>
    <string name="acitivity_good_detail">ActivityGoodDetail</string>
    <string name="coupon_statement">免责声明：此优惠券由商家负责，与超级校园宝无责任关系</string>
    <string name="title_activity_activity_outschool_head">OutSchoolHead</string>
    <string name="activity_coupon_collect">收藏</string>
    <string name="text_comefrom">来自</string>
    <string name="text_price">售价</string>
    <string name="text_old_price">原价</string>
    <string name="text_introduction">宝贝描述:</string>
    <string name="tv_type">类型 :</string>
    <string name="tv_type_empty">类型</string>
    <string name="tv_tele_phone">联系方式 :</string>
    <string name="tv_linker">联系人 :</string>
    <string name="text_product_introduction">详细描述几成新，购买时间有利于吸引更多人的关注哦</string>
    <string name="_140x">140</string>
    <string name="_16x">16</string>
    <string name="text_want_sell">想卖</string>
    <string name="string_price">￥0.00</string>
    <string name="text_linker">联系人</string>
    <string name="text_phone">手机</string>
    <string name="text_product_type">请选择上传产品类型</string>
    <string name="superTreasure">超级校园宝</string>
    <string name="treasure_in_my_hand">一宝在手</string>
    <string name="school_i_have">校园我有</string>
    <string name="please_input_phonenum">请输入手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login">登录</string>
    <string name="register">立即注册</string>
    <string name="access">确定</string>
    <string name="please_choose_province">选择地区</string> <string name="tx_activity_input_orignalPsw">输入原密码</string>
    <string name="tx_activity_input_newPsw">输入新密码</string>
    <string name="tx_activity_input_confirmNewPsw">确认新密码</string>
    <string name="tx_activity_input_orignalPsw_please">请输入原密码</string>
    <string name="tx_activity_input_newPsw_please">请设置新密码</string>
    <string name="tx_activity_input_confirmNewPsw_please">请再次确认密码</string>

    <string name="tx_activity_mine_shuoshuo">我的说说</string>
    <string name="tx_activity_mine_setting">设置</string>
    <string name="tx_activity_mine_collection">我的收藏</string>
    <string name="tx_activity_mine_myshop">我的小店</string>
    <string name="tx_activity_mine_coupon">我的优惠券</string>
    <string name="tx_activity_mine_help">帮助与反馈</string>
    <string name="tx_activity_mine_update">版本更新</string>
    <string name="tx_activity_mine_treasure">我的元宝币</string>
    <string name="tx_activity_mine_quit">退出</string>
    <string name="tx_activity_mine_cancel">取消</string>
    <string name="tx_activity_mine_head">头像</string>
    <string name="tx_activity_mine_currentAccount">当前账号</string>
    <string name="tx_activity_mine_nickname">昵称</string>
    <string name="tx_activity_mine_signName">签名</string>
    <string name="tx_activity_mine_personality">个性</string>
    <string name="tx_activity_mine_changthePassword">修改密码</string>
    <string name="tx_activity_mine_hobby">爱好</string>
    <string name="tx_activity_mine_personSingName">个人签名</string>
    <string name="tx_activity_mine_sex">性别</string>
    <string name="tx_activity_mine_loveOffair">恋爱状态</string>
    <string name="tx_activity_mine_belongSchool">所属学校</string>
    <string name="tx_activity_mine_changPassword">修改密码</string>
    <string name="tx_activity_mine_clearCache">清除缓存</string>
    <string name="tx_activity_mine_sex_boy">男</string>
    <string name="tx_activity_mine_sex_girl">女</string>
    <string name="tx_activity_confirm">确定</string>
    <string name="tx_activity_ifto_clearCache">确定要清除缓存吗？</string>
    <string name="tx_activity_ifto_quit">确定要注销吗？</string>
    <string name="tx_activity_changPassword_tips">设置密码不少于6位，不超过11位，切勿使用过于简单的密码，以免被盗</string>
    <string name="tx_activity_cancel">取消</string>
    <string name="tx_activity_mine_single">单身</string>
    <string name="tx_activity_mine_firstlove">初恋</string>
    <string name="tx_activity_mine_heartlove">热恋</string>
    <string name="tx_activity_mine_married">已婚</string>
    <string name="tx_activity_mine_tips">消息与提示</string>
    <string name="tx_activity_mine_tv_aboutMe">关于我</string>
    <string name="tx_activity_coupon_hadsold">已出售</string>
    <string name="tx_activity_coupon_hadselling">已发布</string>
    <string name="tx_activity_coupon_hadsoldout">已下架</string>
    <string name="acitivity_news_detail">ActivityNewsDetail</string>
    <string name="text_his_shop">他的小店</string>
    <string name="text_my_shop">我的小店</string>
    <string name="text_remove">下架它</string>
    <string name="text_selled">已出售</string>
    <string name="tv_life">生活用品</string>
    <string name="tv_cancel">取消</string>
    <string name="title_activity_coupon">ActivityCoupon</string>
    <string name="please_input_phone_number">请输入手机号:</string>
    <string name="change_pwd"><![CDATA[安全验证>修改密码]]></string>
    <string name="please_input_codes">请输入验证码:</string>
    <string name="get_code">获取验证码</string>
    <string name="codes">手机验证码</string>
    <string name="choose_schol">选择学校</string>
    <string name="input_nickname">输入昵称</string>
    <string name="certain_pwd">确认密码</string>
    <string name="input_pwd">输入密码</string>
    <string name="input_phone_number">输入手机号</string>
    <string name="register_count">注册账号</string>
    <string name="register_now">立即注册</string>
    <string name="read_and_agree">我已阅读并同意</string>
    <string name="supertreasure_protocol">《超级校园宝协议》</string>
    <string name="next_step">下一步</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="bt_finish">完成</string>
	<string name="alpha_next">0.3</string>
    <string name="text_commit">发送</string>
    <string name="tv_nickName">昵称</string>
    <string name="tv_myshop">我的小店</string>
    <string name="tv_boy">男</string>
    <string name="tv_girl">女</string>
    <string name="tv_grallery">从相册中选择</string>
    <string name="tv_camera">照相机</string>
    <string name="confrim">确认</string>
    <string name="cancel">取消</string>
    <string name="nick_name">昵称</string>
    <string name="sing_name">签名</string>
    <string name="exchange_money">兑换元宝币</string>
    <string name="myself">个性</string>
    <string name="update">更新</string>
    <string name="update_hint">宝宝修改了很多BUG、新增了许多功能、UI也变的更美观了，主人，更新吧</string>
    <string name="hobby">爱好</string>
    <string name="empty"></string>
    <string name="sex">性别</string>
    <string name="love">恋爱状态</string>
    <string name="exchange_money_notification">请输入您的序列号</string>
    <string name="nick_name_notification">请输入您的昵称</string>
    <string name="sign_name_notification">请输入您的签名</string>
    <string name="myself_notification">请输入您的个性</string>
    <string name="hobby_notification">请输入您的爱好</string>
    <string name="submit">提交</string>
    <string name="nick_name_hint">宝宝</string>
    <string name="sigh_name_hint">宝宝不开心</string>
    <string name="myselft_hint">个性萌萌哒</string>
    <string name="hobby_hint">唱歌跳舞</string>
    <string name="tv_money_detial">元宝币获取规则：\n a、发布说说：可获取2个元宝币。\n b、点赞\n（除了说说的点赞，其它点赞都可获得1个元宝币）\n c、兑换序列号：与超级校园宝合作的学校社团、机构等举办活动时，凡是参与者可获得相应的序列号，拥有序列号后，可点击右上角的“兑换”按钮，输入序列号便可获得相应的元宝币。\n\n元宝币使用规则：\n a、有5个元宝币可抢任意一张优惠券。\n b、有5个元宝币可发布一个宝贝 \n\niOS版为了早点和你们相见，部分功能还未能实现，敬请期待！</string>
    <string name="slogan">宝宝日子过的好艰难啊，为了给用户更好的体验，宝宝每日都在加班，您的一分钱、一元钱，都是宝宝努力的动力。请扫描下方支付宝或者微信二维码，给予宝宝支持！谢谢大家！</string>
    <string name="contribution">打赏我们</string>
    <string name="download">下载</string>
    <string-array name="sex_array">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string-array name="love_array">
        <item>单身</item>
        <item>初恋</item>
        <item>热恋</item>
        <item>已婚</item>
    </string-array>
</resources>
