<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:gravity="bottom"
    android:id="@+id/root"
    android:orientation="vertical"
    android:padding="5dip" >

    <Button
        android:id="@+id/openCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_gallery_selector"
        android:onClick="on_click"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/tv_camera"
        android:textColor="@color/color_dialog_choos_type"
        android:textSize="@dimen/text30" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#DAD9DB" />

    <Button
        android:id="@+id/openPhones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_camera_selector"
        android:onClick="on_click"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/tv_grallery"
        android:textColor="@color/color_dialog_choos_type"
        android:textSize="@dimen/text30" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:background="@drawable/photo_cancel_selector"
        android:onClick="on_click"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/tv_cancel"
        android:textColor="@color/color_dialog_choos_type"
        android:textSize="@dimen/text30" />

</LinearLayout>