<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:background="@color/text_color_white"
    android:orientation="vertical">

    <include layout="@layout/activity_titlt_back"/>

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.xw.repo.xedittext.XEditText
                app:x_disableEmoji="true"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/text15"
                android:id="@+id/et_introduction"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_mood_put_height"
                android:gravity="left|top"
                android:maxLength="140"
                android:hint="@string/text_product_introduction"
                android:background="@null"
                android:layout_marginLeft="@dimen/text30"
                android:layout_marginRight="@dimen/text30">
            </com.xw.repo.xedittext.XEditText>

            <Button
                android:id="@+id/bt_delete"
                android:text="@string/_140x"
                android:textColor="@color/tabbar_backgroud"
                android:layout_gravity="right|center_vertical"
                android:textSize="@dimen/text30"
                android:background="@drawable/bt_delete"
                android:gravity="center_horizontal|center_vertical"
                android:paddingTop="@dimen/text7"
                android:layout_width="@dimen/text90"
                android:layout_height="@dimen/text60"
                android:layout_marginRight="@dimen/text30"
                android:layout_marginBottom="@dimen/text15"/>

            <View style="@style/cutting_line1"/>
            <View style="@style/cutting_line1"/>

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/text40"
                android:layout_marginRight="@dimen/text40"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text90">

                <TextView
                    android:textSize="@dimen/text35"
                    android:text="@string/text_want_sell"
                    android:layout_width="@dimen/text130"
                    android:layout_height="wrap_content" />

                <EditText
                    android:textColor="@color/black"

                    android:id="@+id/et_price"
                    android:hint="@string/string_price"
                    android:textSize="@dimen/text35"
                    android:inputType="number"
                    android:maxLength="10"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text90" />
            </LinearLayout>

            <View style="@style/cutting_grey_line_left_right_30px"/>

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/text40"
                android:layout_marginRight="@dimen/text40"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text90">

                <TextView
                    android:textSize="@dimen/text35"
                    android:text="@string/text_old_price"
                    android:layout_width="@dimen/text130"
                    android:layout_height="wrap_content" />

                <EditText
                    android:textColor="@color/black"
                    android:id="@+id/et_old_price"
                    android:hint="@string/string_price"
                    android:textSize="@dimen/text35"
                    android:inputType="number"
                    android:maxLength="10"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text90" />
            </LinearLayout>

            <View style="@style/cutting_line1"/>
            <View style="@style/cutting_line1"/>

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/text40"
                android:layout_marginRight="@dimen/text40"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text90">

                <TextView
                    android:textSize="@dimen/text35"
                    android:text="@string/text_linker"
                    android:layout_width="@dimen/text130"
                    android:layout_height="wrap_content" />

                <com.xw.repo.xedittext.XEditText
                    app:x_disableEmoji="true"
                    android:textColor="@color/black"
                    android:maxLength="16"
                    android:id="@+id/et_linker"
                    android:textSize="@dimen/text35"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text90" />
            </LinearLayout>

            <View style="@style/cutting_grey_line_left_right_30px"/>

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/text40"
                android:layout_marginRight="@dimen/text40"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text90">

                <TextView
                    android:textSize="@dimen/text35"
                    android:text="@string/text_phone"
                    android:layout_width="@dimen/text130"
                    android:layout_height="wrap_content" />

                <EditText
                    android:textColor="@color/black"
                    android:id="@+id/et_phone"
                    android:inputType="phone"
                    android:textSize="@dimen/text35"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text90" />
            </LinearLayout>

            <View style="@style/cutting_grey_line_left_right_30px"/>

            <LinearLayout
                android:id="@+id/ll_type"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/text40"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text90">

                <TextView
                    android:textSize="@dimen/text35"
                    android:text="@string/tv_type_empty"
                    android:layout_width="@dimen/text130"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textColor="@color/black"
                    android:id="@+id/tv_type"
                    android:textSize="@dimen/text35"
                    android:hint="@string/text_product_type"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/iv_main_boult"
                    android:layout_marginRight="@dimen/text30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_down"/>
            </LinearLayout>

            <View style="@style/cutting_grey_line_left_right_30px"/>
            <GridView
                android:id="@+id/NoScrollgridview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/good_image_grid_height"
                android:layout_marginTop="@dimen/text30"
                android:layout_marginLeft="@dimen/text30"
                android:layout_marginRight="@dimen/text30"
                android:horizontalSpacing="@dimen/text7"
                android:numColumns="3"
                android:scrollbars="none"
                android:verticalSpacing="5dp" >
            </GridView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>